refactor chat and discover UI for improved layout and styling